[package]
name = "asuro-timer"
version = "0.2.0"
description = "A simple timer using windows notifications."
authors = ["Asuro <asuro@posteo.de>"]
repository = "https://github.com/TheAsuro/asuro-timer"
license = "OSL-3.0"
edition = "2018"

[[bin]]
name = "timer"
path = "src/main.rs"

[dependencies]
win32console = "0.1.4"
winrt-notification = "0.3.0"